tests/expectations/compiler/integers/u32/max_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372008]: The value 4294967296 is not a valid `u32`
    --> compiler-test:5:22
     |
   5 |         let a: u32 = 4294967296u32;
     |                      ^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
